Cập nhật API đăng ký, đăng nhập, log out, SegmentGroups API
